# openclaw-mobile

./: .gitignore  AGENTS.md  COORDINATION.md  README.md  flutter_rust_bridge.yaml  pubspec.yaml
android/: gradle.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/openclaw_mobile/: MainActivity.kt
docs/: android-build-setup.md  obsidian_project
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
lib/src/rust/api/: connection.dart  events.dart  simple.dart  terminal.dart
lib/src/services/: gateway_service.dart  mock_gateway.dart
lib/src/ui/: theme.dart
lib/src/ui/screens/: design_system_demo.dart  terminal_screen.dart
lib/src/ui/widgets/: canvas_view.dart  chat_bubble.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust_lib/: Cargo.toml
rust_lib/src/: frb_generated.rs  lib.rs
rust_lib/src/api/: connection.rs  events.rs  mod.rs  simple.rs  terminal.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
